tests/samples/block-unclosed-1/template.blate
// error: each
<ul id="navigation">
    {@each item in navigation}
        <li><a href="{ item.href }">{ item.caption }</a></li>
</ul>
